--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,27 @@
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: "actions/checkout@v3"
+      - name: Install Nix
+        uses: "cachix/install-nix-action@v22"
+        with:
+          extra_nix_config: |2
+              allow-import-from-derivation = true
+          nix_path: nixpkgs=channel:nixos-unstable
+      - name: Use Cachix store
+        uses: "cachix/cachix-action@v12"
+        with:
+          authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
+          extraPullNames: "e10,nix-community"
+          name: 'e10'
+      - run: |2
+            nix -Lv build .#nixosConfigurations.${{ matrix.host }}.config.system.build.toplevel
+    strategy:
+      matrix:
+        host:
+          - gateway
   check:
     runs-on: ubuntu-latest
     steps:
