Build omnibus on CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,7 @@ jobs:
         host:
           - gateway
           - monitor
+          - omnibus
   check:
     runs-on: ubuntu-latest
     steps:
