Build htpc on CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,7 @@ jobs:
           - gateway
           - monitor
           - omnibus
+          - htpc
   check:
     runs-on: ubuntu-latest
     steps:
