Build matrix on CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,7 @@ jobs:
           - monitor
           - omnibus
           - htpc
+          - matrix
   check:
     runs-on: ubuntu-latest
     steps:
