Completely rebuild `controller`

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,7 @@ jobs:
           - omnibus
           - htpc
           - matrix
+          - controller
   check:
     runs-on: ubuntu-latest
     steps:
