--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: "actions/checkout@v3"
+      - run: |2
+            bash .github/workflows/free-space.sh
       - name: Install Nix
         uses: "cachix/install-nix-action@v22"
         with:
@@ -32,6 +34,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: "actions/checkout@v3"
+      - run: |2
+            bash .github/workflows/free-space.sh
       - name: Install Nix
         uses: "cachix/install-nix-action@v22"
         with:
