--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,22 +2,21 @@ jobs:
   check:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: "actions/checkout@v3"
-      - name: Install Nix
-        uses: "cachix/install-nix-action@v22"
-        with:
-          extra_nix_config: |2
-              allow-import-from-derivation = true
-          nix_path: nixpkgs=channel:nixos-unstable
-      - name: Use Cachix store
-        uses: "cachix/cachix-action@v12"
-        with:
-          authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
-          extraPullNames: "e10,nix-community"
-          name: 'e10'
-      - run: |2
-            nix flake check --impure --show-trace
+    - name: Checkout code
+      uses: actions/checkout@v3
+    - name: Install Nix
+      uses: DeterminateSystems/nix-installer-action@main
+      with:
+        extra-conf: allow-import-from-derivation = true
+    - name: Use Cachix store
+      uses: cachix/cachix-action@v12
+      with:
+        authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
+        extraPullNames: e10,nix-community
+        name: e10
+    - run: 'nix flake check --impure --all-systems --accept-flake-config --show-trace
+
+        '
 name: CI
-on:
+'on':
   push: {}
