--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,36 @@
 jobs:
+  buildSystem:
+    name: Build system
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+    - name: Install Nix
+      uses: DeterminateSystems/nix-installer-action@main
+      with:
+        extra-conf: allow-import-from-derivation = true
+    - name: Use Cachix store
+      uses: cachix/cachix-action@v12
+      with:
+        authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
+        extraPullNames: e10,nix-community
+        name: e10
+    - run: 'nix build .#nixosConfigurations.${{ matrix.host }}.config.system.build.toplevel
+        --accept-flake-config --show-trace
+
+        '
+    strategy:
+      matrix:
+        host:
+        - builder
+        - controller
+        - gateway
+        - htpc
+        - matrix
+        - monitor
+        - omnibus
   check:
+    name: Check flake
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
