--- a/deploy/ansible/roles/common/tasks/nut.yml
+++ b/deploy/ansible/roles/common/tasks/nut.yml
@@ -21,7 +21,14 @@
     group: nut
     mode: "0644"
 
-- name: Ensure nut-client is running
+- name: Ensure nut-client is running (on Debian)
+  when: ansible_distribution == "Debian"
   ansible.builtin.systemd_service:
     name: nut-client
+    state: started
+
+- name: Ensure nut-monitoir is running (on Arch)
+  when: ansible_distribution == "Archlinux"
+  ansible.builtin.systemd_service:
+    name: nut-monitor
     state: started
