--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -15,7 +15,7 @@ jobs:
         authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
         extraPullNames: e10,nix-community
         name: e10
-    - run: 'nix flake check --impure --all-systems --accept-flake-config --show-trace
+    - run: 'nix flake check --impure --accept-flake-config --show-trace
 
         '
 name: Check
