Add iperf3 to Ansible deploy, don't use mitogen

--- a/deploy/ansible/roles/common/tasks/tooling.yml
+++ b/deploy/ansible/roles/common/tasks/tooling.yml
@@ -13,3 +13,13 @@
   ansible.builtin.package:
     name: htop
     state: present
+
+- name: Install iperf3
+  ansible.builtin.package:
+    name: iperf3
+    state: present
+
+- name: Ensure iperf3 service is running
+  ansible.builtin.systemd:
+    name: iperf3
+    enabled: true
