--- a/deploy/ansible/roles/common/tasks/tooling.yml
+++ b/deploy/ansible/roles/common/tasks/tooling.yml
@@ -1,4 +1,9 @@
 ---
+- name: Install mosh
+  ansible.builtin.package:
+    name: mosh
+    state: present
+
 - name: Install fish
   ansible.builtin.package:
     name: fish
