--- a/deploy/ansible/inventory.yml
+++ b/deploy/ansible/inventory.yml
@@ -7,7 +7,10 @@ all:
     basil:
     cardamom:
     dill:
+    elderflower:
     pikvm:
+    router:
+      ansible_host: 10.0.0.1
 
 rack:
   hosts:
@@ -19,6 +22,7 @@ rack:
 networking:
   hosts:
     dill:
+    elderflower:
 
 proxmox:
   hosts:
@@ -26,3 +30,9 @@ proxmox:
     basil:
     cardamom:
     dill:
+    elderflower:
+
+opnsense:
+  hosts:
+    router:
+      ansible_host: 10.0.0.1
