--- a/deploy/ansible/requirements.yml
+++ b/deploy/ansible/requirements.yml
@@ -3,3 +3,6 @@ collections:
   - name: ansibleguy.opnsense
     version: "1.2.8"
     source: https://galaxy.ansible.com
+
+  - name: simoncaron.pve_acme
+    version: "1.4.0"
