--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,35 +3,36 @@ jobs:
     name: Build system
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-    - name: Install Nix
-      uses: DeterminateSystems/nix-installer-action@main
-      with:
-        extra-conf: allow-import-from-derivation = true
-    - name: Use Cachix store
-      uses: cachix/cachix-action@v12
-      with:
-        authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
-        extraPullNames: e10,nix-community
-        name: e10
-    - run: 'nix build .#nixosConfigurations.${{ matrix.host }}.config.system.build.toplevel
-        --accept-flake-config --show-trace
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Install Nix
+        uses: DeterminateSystems/nix-installer-action@main
+        with:
+          extra-conf: allow-import-from-derivation = true
+      - name: Use Cachix store
+        uses: cachix/cachix-action@v12
+        with:
+          authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
+          extraPullNames: e10,nix-community
+          name: e10
+      - run:
+          "nix build .#nixosConfigurations.${{ matrix.host }}.config.system.build.toplevel
+          --accept-flake-config --show-trace
 
-        '
+          "
     strategy:
       matrix:
         host:
-        - builder
-        - controller
-        - dill
-        - gateway
-        - htpc
-        - matrix
-        - monitor
-        - omnibus
+          - builder
+          - controller
+          - dill
+          - gateway
+          - htpc
+          - matrix
+          - monitor
+          - omnibus
 name: Build
-'on':
+"on":
   push:
     branches:
-    - main
+      - main
