--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,23 +3,28 @@ jobs:
     name: Build system
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: Install Nix
-        uses: DeterminateSystems/nix-installer-action@main
-        with:
-          extra-conf: allow-import-from-derivation = true
-      - name: Use Cachix store
-        uses: cachix/cachix-action@v12
-        with:
-          authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
-          extraPullNames: e10,nix-community
-          name: e10
-      - run:
-          "nix build .#nixosConfigurations.${{ matrix.host }}.config.system.build.toplevel
-          --accept-flake-config --show-trace
+    - name: Checkout code
+      uses: actions/checkout@v3
+    - name: Install Nix
+      uses: DeterminateSystems/nix-installer-action@main
+      with:
+        extra-conf: allow-import-from-derivation = true
+    - name: Setup Attic cache
+      uses: ryanccn/attic-action@v0
+      with:
+        cache: e10
+        endpoint: https://cache.e10.camp
+        token: ${{ secrets.ATTIC_TOKEN }}
+    - name: Use Cachix store
+      uses: cachix/cachix-action@v12
+      with:
+        authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
+        extraPullNames: e10,nix-community
+        name: e10
+    - run: 'nix build .#nixosConfigurations.${{ matrix.host }}.config.system.build.toplevel
+        --accept-flake-config --show-trace
 
-          "
+        '
     strategy:
       matrix:
         host:
@@ -31,7 +36,7 @@ jobs:
           - monitor
           - omnibus
 name: Build
-"on":
+'on':
   push:
     branches:
-      - main
+    - main
