--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -9,6 +9,12 @@ jobs:
         uses: DeterminateSystems/nix-installer-action@main
         with:
           extra-conf: allow-import-from-derivation = true
+      - name: Setup Attic cache
+        uses: ryanccn/attic-action@v0
+        with:
+          cache: e10
+          endpoint: https://cache.e10.camp
+          token: ${{ secrets.ATTIC_TOKEN }}
       - name: Use Cachix store
         uses: cachix/cachix-action@v12
         with:
