--- a/modules/profiles/media-management/recyclarr/config.yml
+++ b/modules/profiles/media-management/recyclarr/config.yml
@@ -192,7 +192,14 @@ sonarr:
             qualities:
               - WEBDL-2160p
               - WEBRip-2160p
+          - name: Bluray-2160p
+            qualities:
+              - Bluray-2160p
+              - Bluray-2160p Remux
           - name: Remux-1080p
+            qualities:
+              - Bluray-1080p
+              - Bluray-1080p Remux
           - name: WEB 1080p
             qualities:
               - WEBDL-1080p
