Downgrade cachix-action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4.2.1
     - name: Install Nix
-      uses: DeterminateSystems/nix-installer-action@main
+      uses: DeterminateSystems/nix-installer-action@v14
       with:
         extra-conf: allow-import-from-derivation = true
     - name: Setup Attic cache
@@ -16,7 +16,7 @@ jobs:
         endpoint: https://cache.e10.camp
         token: ${{ secrets.ATTIC_TOKEN }}
     - name: Use Cachix store
-      uses: cachix/cachix-action@v15
+      uses: cachix/cachix-action@v14
       with:
         authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
         name: e10
