--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -3,27 +3,27 @@ jobs:
     name: Check flake
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: Install Nix
-        uses: DeterminateSystems/nix-installer-action@main
-        with:
-          extra-conf: allow-import-from-derivation = true
-      - name: Setup Attic cache
-        uses: ryanccn/attic-action@v0
-        with:
-          cache: e10
-          endpoint: https://cache.e10.camp
-          token: ${{ secrets.ATTIC_TOKEN }}
-      - name: Use Cachix store
-        uses: cachix/cachix-action@v12
-        with:
-          authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
-          extraPullNames: e10,nix-community
-          name: e10
-      - run: "nix flake check --impure --accept-flake-config --show-trace
+    - name: Checkout code
+      uses: actions/checkout@v4.2.1
+    - name: Install Nix
+      uses: DeterminateSystems/nix-installer-action@v14
+      with:
+        extra-conf: allow-import-from-derivation = true
+    - name: Setup Attic cache
+      uses: ryanccn/attic-action@v0.3.1
+      with:
+        cache: e10
+        endpoint: https://cache.e10.camp
+        token: ${{ secrets.ATTIC_TOKEN }}
+    - name: Use Cachix store
+      uses: cachix/cachix-action@v15
+      with:
+        authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
+        installCommand: nix profile install github:NixOS/nixpkgs/nixpkgs-unstable#cachix
+        name: e10
+    - run: 'nix flake check --impure --accept-flake-config --show-trace
 
-          "
+        '
 name: Check
-"on":
+'on':
   push: {}
