Add Eaton 5P550R configuration

--- a/deploy/ansible/roles/common/files/nut/apc/upsmon.conf
+++ b/deploy/ansible/roles/common/files/nut/apc/upsmon.conf
@@ -1,4 +1,4 @@
-MONITOR apc@controller:3493 1 follower "132010" slave
+MONITOR eaton@controller:3493 1 follower "132010" slave
 
 RUN_AS_USER root
 
