--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,10 @@
 jobs:
   buildSystem:
+    if: 'github.ref == ''refs/heads/main'' ||
+
+      contains(github.event.head_commit.message, ''[build]'')
+
+      '
     name: Build system
     runs-on: ubuntu-latest
     steps:
@@ -37,6 +42,4 @@ jobs:
         - omnibus
 name: Build
 'on':
-  push:
-    branches:
-    - main
+  push: {}
