--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,16 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4.2.1
+    - run: df -h
+    - name: Clean up storage
+      run: 'sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache/CodeQL
+
+        sudo docker image prune --all --force
+
+        sudo docker builder prune -a
+
+        '
+    - run: df -h
     - name: Install Nix
       uses: DeterminateSystems/nix-installer-action@v14
       with:
@@ -24,7 +34,7 @@ jobs:
       uses: cachix/cachix-action@v15
       with:
         authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
-        installCommand: nix profile install github:NixOS/nixpkgs/nixpkgs-unstable#cachix
+        installCommand: nix profile add github:NixOS/nixpkgs/nixpkgs-unstable#cachix
         name: e10
     - run: 'nix build .#nixosConfigurations.${{ matrix.host }}.config.system.build.toplevel
         --accept-flake-config --show-trace
@@ -46,6 +56,16 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4.2.1
+    - run: df -h
+    - name: Clean up storage
+      run: 'sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache/CodeQL
+
+        sudo docker image prune --all --force
+
+        sudo docker builder prune -a
+
+        '
+    - run: df -h
     - name: Install Nix
       uses: DeterminateSystems/nix-installer-action@v14
       with:
@@ -60,7 +80,7 @@ jobs:
       uses: cachix/cachix-action@v15
       with:
         authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
-        installCommand: nix profile install github:NixOS/nixpkgs/nixpkgs-unstable#cachix
+        installCommand: nix profile add github:NixOS/nixpkgs/nixpkgs-unstable#cachix
         name: e10
     - run: 'nix build .#nixosConfigurations.${{ matrix.host }}.config.system.build.toplevel
         --accept-flake-config --show-trace
