--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -5,6 +5,14 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4.2.1
+    - name: Clean up storage
+      run: 'sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache/CodeQL
+
+        sudo docker image prune --all --force
+
+        sudo docker builder prune -a
+
+        '
     - name: Install Nix
       uses: DeterminateSystems/nix-installer-action@v14
       with:
@@ -19,7 +27,7 @@ jobs:
       uses: cachix/cachix-action@v15
       with:
         authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
-        installCommand: nix profile install github:NixOS/nixpkgs/nixpkgs-unstable#cachix
+        installCommand: nix profile add github:NixOS/nixpkgs/nixpkgs-unstable#cachix
         name: e10
     - run: 'nix flake check --impure --accept-flake-config --show-trace
 
