--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -18,7 +18,7 @@ jobs:
       with:
         extra-conf: allow-import-from-derivation = true
     - name: Add SSH keys to ssh-agent
-      users: webfactory/ssh-agent@v0.9.0
+      uses: webfactory/ssh-agent@v0.9.0
       with:
         ssh-private-key: ${{ secrets.SECRETS_DEPLOY_KEY }}
     - name: Setup Attic cache
