Add integration with secret configuration in separate repo (#142)
* Add integration with secret configuration in separate repo

* Add ssh-agent to CI

* Fix CI

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,10 @@ jobs:
       uses: DeterminateSystems/nix-installer-action@v14
       with:
         extra-conf: allow-import-from-derivation = true
+    - name: Add SSH keys to ssh-agent
+      uses: webfactory/ssh-agent@v0.9.0
+      with:
+        ssh-private-key: ${{ secrets.SECRETS_DEPLOY_KEY }}
     - name: Setup Attic cache
       uses: ryanccn/attic-action@v0.3.1
       with:
@@ -66,6 +70,10 @@ jobs:
       uses: DeterminateSystems/nix-installer-action@v14
       with:
         extra-conf: allow-import-from-derivation = true
+    - name: Add SSH keys to ssh-agent
+      uses: webfactory/ssh-agent@v0.9.0
+      with:
+        ssh-private-key: ${{ secrets.SECRETS_DEPLOY_KEY }}
     - name: Setup Attic cache
       uses: ryanccn/attic-action@v0.3.1
       with:
